plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.10'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}
repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
//	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	compileOnly 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
//	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc11
	implementation 'com.oracle.database.jdbc:ojdbc11:21.3.0.0'
	// https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-java8time
	implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'
	// https://mvnrepository.com/artifact/net.coobird/thumbnailator
	implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.20'
	
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-oauth2-client
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	
	// https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
	
	// https://mvnrepository.com/artifact/com.github.gavlyukovskiy/p6spy-spring-boot-starter
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.2'
	
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	// RestTemplate방식으로 api 사용하기 위해 추가하는 dependencies
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml
    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.4'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.4'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.4'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.4'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
	implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.1'
    implementation 'com.fasterxml.jackson.module:jackson-module-jaxb-annotations:2.15.4'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
tasks.withType(JavaCompile) {
    options.compilerArgs << "-parameters"
}
tasks.withType(JavaExec) {
    jvmArgs += '--add-modules java.xml.bind'
}
